--- a/Progetto/Progetto/pom.xml
+++ b/Progetto/Progetto/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+  			<groupId>com.google.cloud</groupId>
+  			<artifactId>google-cloud-language</artifactId>
+  			<version>2.29.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
